--- a/css/styles.css
+++ b/css/styles.css
@@ -272,7 +272,6 @@ margin-right: 0;
 
 	margin-bottom: 30px;
 
-	width: 270px;
 	height: 120px;
 
 	border-radius: 4px;
@@ -366,13 +365,40 @@ margin-right: 0;
 }
 
 .person-card {
-	margin-bottom: 16px;
-
 	border-top: 30px;
 }
 
-.team .photo {
-	margin-bottom: 30px;
+.person-card {
+	padding: 30px 32px;
+}
+
+
+.person-card .list {
+	display: flex;
+	text-align: center;
+	justify-content: center;
+}
+
+
+.person-card .item:not(:last-child) {
+	margin-right: 10px;
+}
+
+.person-card .link {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	width: 44px;
+	height: 44px;
+	border-radius: 50%;
+	color: #afb1b8;
+}
+
+.person-card .link:hover,
+.person-card .link:focus  {
+	color: #fff;
+	background-color: var(--focus-hover-color);
 }
 
 .team .name {
@@ -385,36 +411,9 @@ margin-right: 0;
 	color: var(--title-text-color);
 }
 
-.team-icon .list {
-	display: flex;
-	text-align: center;
-	justify-content: center;
-
-	margin-bottom: 30px;
-}
-
-.team-icon .item:not(:last-child) {
-	margin-right: 10px;
-}
-
-.team-icon .link {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
-	width: 44px;
-	height: 44px;
-	border-radius: 50%;
-	color: #afb1b8;
-}
-
-.team-icon .link:hover {
-	color: #fff;
-	background-color: var(--focus-hover-color);
-}
-
 .team .text {
 	text-align: center;
+	margin-bottom: 16px;
 
 	line-height: 1.2;
 
@@ -423,7 +422,7 @@ margin-right: 0;
 
 .client .title {
 	margin-bottom: 50px;
-
+	
 	text-align: center;
 	font-size: 36px;
 	line-height: 1.4;
@@ -470,6 +469,7 @@ margin-right: 0;
 
 .footer .container {
 	display: flex;
+	align-items: baseline;
 }
 
 .footer-group {
@@ -504,7 +504,7 @@ margin-right: 0;
 	color: var(--title-h1-color);
 }
 
-.footer .list .item:not(:last-child) {
+.footer-contacts .item:not(:last-child) {
 	margin-bottom: 9px;
 }
 
@@ -516,11 +516,6 @@ margin-right: 0;
 	letter-spacing: 0.03em;
 
 	color: rgba(255, 255, 255, 0.6);
-}
-
-.social {
-	margin-top: 12px;
-	width: 206px;
 }
 
 .social-title {
@@ -624,7 +619,8 @@ margin-right: 0;
 	margin-right: 30px;
 }
 
-.portfolio-list .item:hover {
+.portfolio-list .link:hover,
+.portfolio-list .link:focus {
 	background: #ffffff;
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 } 
